# hoc_multi_plastic

./: multi plastic pipe HOC.ipynb  pyproject.toml
hoc_multi_plastic/: __init__.py  hoc_widgets.py
